primitives/api/test/tests/ui/method_with_two_api_ver.stderr
error: Found multiple feature gated api versions (cfg attribute with nested `api_version` attribute). This is not supported.
  --> tests/ui/method_with_two_api_ver.rs:20:3
   |
20 |         #[cfg_attr(feature = "enable-staging-api", api_version(99))]
   |         ^

error: `api_version` found here
  --> tests/ui/method_with_two_api_ver.rs:20:3
   |
20 |         #[cfg_attr(feature = "enable-staging-api", api_version(99))]
   |         ^

error: `api_version` found here
  --> tests/ui/method_with_two_api_ver.rs:21:3
   |
21 |         #[cfg_attr(feature = "enable-staging-api", api_version(98))]
   |         ^
